# rov-telemetry

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: docker.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/tests/: test_main.py
esp32-mavlink/: main.py  platformio.ini  pyproject.toml
esp32-mavlink/src/: main.cpp
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: ArtificialHorizon.vue  HudOverlay.vue  MavLinkCards.vue  McapControls.vue  RecorderControls.vue  SimulatorControls.vue  StreamControls.vue  TelemetryCard.vue  VideoReplay.vue
frontend/src/composables/: useMcapReplay.ts  useRecorderControl.ts  useSimulator.ts  useTelemetry.ts  useWebRTC.ts  useWebSocket.ts  useZenohQuery.ts
helpers/: __init__.py  logger.py  pyproject.toml
mavlink-bridge/: Cargo.toml  Dockerfile
mavlink-bridge/src/: handle_messages.rs  main.rs
mavlink-simulator/: Dockerfile  main.py  pyproject.toml
mavlink-simulator/tests/: test_main.py
recorder/: Cargo.toml  Dockerfile
recorder/src/: main.rs
simulator/: Cargo.toml  Dockerfile
simulator/src/: main.rs
telemetry/: Dockerfile  main.py  pyproject.toml
telemetry/tests/: test_main.py
training/: README.md  pyproject.toml  train.py
vision/: Dockerfile  main.py  marine.pt  pyproject.toml
vision/tests/: test_main.py
