[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eclipse-zenoh>=1.9.0",
    "fastapi>=0.136.3",
    "flake8>=7.3.0",
    "mcap>=1.3.1",
    "python-multipart>=0.0.29",
    "uvicorn>=0.48.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
