[package]
name = "mavlink-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
mavlink = { version = "0", features = ["ardupilotmega"] }
serde_json = "1.0.150"
zenoh = "1.9.0"
env_logger = "0.11.10"
log = "0.4.30"
dashmap = "6.2.1"
