[project]
name = "telemetry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "helpers",
    "docker>=7.1.0",
    "fastapi>=0.138.0",
    "psutil>=7.2.2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.uv.sources]
helpers = { path = "../helpers" }