[project]
name = "vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "helpers",
    "aiortc>=1.14.0",
    "asyncio>=4.0.0",
    "av>=16.1.0",
    "eclipse-zenoh>=1.9.0",
    "fastapi>=0.136.3",
    "httpx2>=2.3.0",
    "loguru>=0.7.3",
    "opencv-python-headless>=4.13.0.92",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-multipart>=0.0.30",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.4.61",
    "uvicorn[standard]>=0.48.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
helpers = { path = "../helpers" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
